syntax = "proto3";

package proto;

import "google/api/annotations.proto";

option go_package="/pb";

message Category {
    int32 ID = 1;
    string Name = 2;
    int32 ParentID = 3;
}

message Empty {
}

//CREATE CATEGORY
message CreateCategoryRequest{
    string Name = 1;
    int32 ParentID = 2;
}

message CreateCategoryResponse{
    Category Category = 1;
}

//UPDATE CATEGORY
message UpdateCategoryRequest{
    Category Category = 1;
}

message UpdateCategoryResponse{
    Category Category = 1;
}

//DELETE CATEGORY
message DeleteCategoryRequest{
    string Name = 1;
}

message DeleteCategoryResponse{
    string Result = 1;
}

//GET CATEGORY
message GetCategoryRequest{
    string Name = 1;
}

message GetCategoryResponse{
    Category Category = 1;
}


//GET ALL CATEGORIES
message GetAllCategoriesRequest {
    Empty empty = 1;
}

message GetAllCategoriesResponse {
    repeated Category Category = 1;
}

//GET SUB-CATEGORIES
message GetSubCategoriesRequest{
    string Name = 1;
}

message GetSubCategoriesResponse{
    repeated Category Category = 1;
}

//CATEGORY SERVICE
service CategoryService {
    rpc CreateCategory (CreateCategoryRequest) returns (CreateCategoryResponse) {
        option (google.api.http) = {
            post: "/api/category"
        };
    };

    rpc UpdateCategory (UpdateCategoryRequest) returns (UpdateCategoryResponse) {
        option (google.api.http) = {
            put: "/api/category/{Name}"
        };
    };

    rpc DeleteCategory (DeleteCategoryRequest) returns (DeleteCategoryResponse){
        option (google.api.http) = {
            delete: "/api/category/{Name}"
        };
    };

    rpc GetAllCategories (GetAllCategoriesRequest) returns (GetAllCategoriesResponse){
        option (google.api.http) = {
            get: "/api/category"
        };
    };

    rpc GetSubCategories (GetSubCategoriesRequest) returns (GetSubCategoriesResponse){
        option (google.api.http) = {
            get: "/api/category/{Name}"
        };
    };
}